Removed jQuery from template and fixed scroll overflow

--- a/scss/editor/_sidebar.scss
+++ b/scss/editor/_sidebar.scss
@@ -42,6 +42,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    overflow: auto;
     
     h2 {
       width: auto;
