--- a/scss/editor/editor.scss
+++ b/scss/editor/editor.scss
@@ -377,6 +377,7 @@ tr.slip-reordering {
 
   #content {
     padding-left: 240px; 
+    overflow: auto;
   }
 
   .column-3 {
